  * analysis.polymer.PersistenceLength no longer requires the perform_fit()
    method to be used, this is done automatically in run()

Testsuite
  * Raised minimum pytest version to 3.3.0, warns now uses the `match`
    argument instead of `match_expr` (Issue #2329)
  * Add tests for the new water bridge analysis (PR #2087)

11/06/18 richardjgowers
  * 0.19.2

Changes
  * Added Windows support


11/05/18 orbeckst, PicoCentauri, richardjgowers, zemanj
  * 0.19.1

Fixes
   * limit output of Chainreader __repr__ (#2109)
   * added missing docs for lib.pkdtree (#2104)
   * Added sphinx markup for FrameIterator (#2106)
   * fixed error for residues and segments containing 0 atoms (#1999)
   * fixed numpy deprecation warnings (#2122, #2123)
   * Fixed reading PDB files with DOS line ending (#2128)

Deprecations
   * Default ``filename`` directory of align.AlignTraj is deprecated and
     will change in 1.0 to the current directory.

10/09/18 tylerjereddy, richardjgowers, palnabarun, orbeckst, kain88-de, zemanj,
         VOD555, davidercruz, jbarnoud, ayushsuhane, hfmull, micaela-matta,
         sebastien.buchoux, arm61, p-j-smith, IAlibay

  * 0.19.0

Enhancements
  * Added bond/angle/dihedral reading in PARM7 TOPParser (PR #2052)
  * Replaced multiple apply (_apply_distmat, _apply_kdtree)
    methods in distance based selections with
    lib.distances.capped_distance for automatic selection of
    distance evaluation method. (PR #2035)
  * Modified analysis.rdf.InterRDF to use lib.distances.capped_distance
    to handle rdf calculations for large systems. (PR #2013)
  * Added return_distances argument in lib.distances.capped_distances
    to evaluate and return distances only when required. Modified
    the optimization rules in lib.distances._determine_method for
    faster computations. (PR #2041)
  * Added method search_tree in lib.pkdtree to find all the pairs between
    two kdtrees. (PR #2041)