@@ -641,6 +641,9 @@ Testsuite
 
 Changes
   * Added Windows support
+  
+Enhancements
+   * Added dielectric analysis module
 
 
 11/05/18 orbeckst, PicoCentauri, richardjgowers, zemanj
